--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <body>
 
     <div class="text">
-      <img class="img" src="./img/logo1100.png" />
+      <img class="img" src="./img/canarytraceLogo.png" />
     </div>
     <div id="particles-js">
       <canvas class="particles-js-canvas-el" style="width: 100%; height: 100%;" width="1438" height="94"></canvas>
