--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
     <link rel="canonical" href="http://teststack.cz/">
-    <title>TEST STACK Konference 2020</title>
+    <title>Canarytrace</title>
     <meta name="description" content="Nezávislá test automation konference.">
     <meta name="keywords" content="">
     <meta name="robots" content="index, nofollow">
@@ -110,53 +110,7 @@
             <div class="spacer medium"></div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-xs-6 col-menu">
-            <h2 class="headline bottom-line left">Eventy</h2>
-            <ul class="menu-list">
-              <li><a target="_blank" href="./2020-duben/index.html">Dubnová konference 2020</a></li>
-              <li><a target="_blank" href="https://www.meetup.com/ProfessionalTesting/">Další testerské akce</a></li>
-            </ul>
-          </div>
-          <div class="col-xs-6 col-menu">
-            <h2 class="headline bottom-line left">Kontakt</h2>
-
-            <p>
-              Radim Daniel Pánek<br>
-              <strong>SDET & Performance Tester</strong><br>
-              <a href="mailto:rdpanek@canarytrace.com">rdpanek@canarytrace.com</a><br>
-              <br>
-              <span class="s">&nbsp;&nbsp;</span>
-              <a target="_blank" href="https://twitter.com/RDPanek">
-                <amp-img alt="Twitter"
-                  src="img/twitter_b.png"
-                  width="34"
-                  height="34"
-                  layout="fixed">
-                </amp-img>
-              </a>
-              <span class="s">&nbsp;&nbsp;</span>
-              <a target="_blank" href="https://www.youtube.com/c/teststack">
-                <amp-img alt="Youtube"
-                  src="img/youtube_b.png"
-                  width="34"
-                  height="34"
-                  layout="fixed">
-                </amp-img>
-              </a>
-              <span class="s">&nbsp;&nbsp;</span>
-              <a target="_blank" href="https://www.instagram.com/rdpanek/">
-                <amp-img alt="Instagram"
-                  src="img/instagram_b.png"
-                  width="34"
-                  height="34"
-                  layout="fixed">
-                </amp-img>
-              </a>
-
-            </p>
-          </div>
-        </div>
+        
       </div>
     </amp-sidebar>
     <amp-analytics type="gtag" data-credentials="include">
@@ -182,28 +136,18 @@
         }
       </script>
     </amp-analytics>
-    <header class="container-fluid  header">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-6">
-
-          </div>
-          <div class="col-xs-6">
-              <button class="hamburger" on='tap:main-menu.toggle'><span></span><span></span><span></span></button>
-          </div>
-        </div>
-        <div class="row middle-xs">
+    <header class="container-fluid header">
+        <div class="row center-xs middle-xs">
           <div class="col-xs-12">
-
+            <amp-img tabindex="0" src="img/smokeProLogo.png" width="700" height="193"></amp-img>
           </div>
         </div>
-      </div>
       <svg xmlns="http://www.w3.org/2000/svg" class="scroller" viewBox="0 0 50 80">
         <rect width="50" height="80" fill="#202530" class="scroller-base" opacity=".3" rx="25" ry="25"/>
         <rect width="20" height="30" x="15" y="14" fill="#fff" class="scroller-wheel" opacity=".3" rx="10" ry="10"/>
       </svg>
     </header>
-    <div class="fluid-container section blue">
+    <div class="fluid-container section">
       <div class="container screen" id="osnova-skoleni">
         <div class="row">
           <div class="col-xs-12">
