index.html textace

--- a/index.html
+++ b/index.html
@@ -2,7 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>SmokePro (by Canarytrace)</title>
+    <title>Canarytrace</title>
+    <meta name="description" content="Canarytrace - stack for frontend testing and analyze behavior of browser">
+    <meta property="og:title" content="Canarytrace">
+    <meta property="og:description" content="Stack for frontend testing and analyze behavior of browser">
+    <meta property="og:url" content="http://canarytrace.com/">
+    <meta property="og:site_name" content="Canarytrace">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@canarytrace">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-54326167-6"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-54326167-6');
+    </script>
+
     <link rel="stylesheet" href="styles/page.css">
 </head>
 <body>
@@ -10,18 +29,17 @@
     <div class="main-h">
         <img src="assets/images/smokepro_logo.svg" alt="SmokePro Logo" class="sp_logo">
         <div class="btn-container">
-            <a href="#" class="btn"><img src="assets/images/file.svg" alt="..">Documentation</a>
-            <a href="#" class="btn btn-yellow"><img src="assets/images/time.svg" alt="..">Request a demo</a>
-            <a href="#" class="btn"><img src="assets/images/down.svg" alt="..">Download PDF</a>
+            <a href="https://bit.ly/canary-doc" target="_blank" class="btn"><img src="assets/images/file.svg" alt="Canarytrace documentation">Documentation</a>
+            <a href="mailto:rdpanek@canarytrace.com,miroslav.kret@canarytrace.com?subject=Canarytrace%20Smoke%20Pro%20Demo" target="_blank" class="btn btn-yellow"><img src="assets/images/time.svg" alt="Request a demo">Request a demo</a>
+            <a href="#" class="btn" target="_blank"><img src="assets/images/down.svg" alt="Download OnePager">Download OnePager</a>
         </div>
     </div>
     <footer>
         <div class="container">
-            <p>Nunc vitae semper tortor, quis fermentum ante. Cras feugiat, ex non blandit commodo, est ante convallis ante, et vestibulum leo erat at quam. Nunc sit amet consequat dolor.</p>
+            <p>Canarytrace Smoke Pro is a Plug’n'Play stack for testing and monitoring your web application from user perspective.</p>
             <div class="separ"></div>
-            <a href="#" class="link link-p">+420 000 000 000</a>
-            <a href="#" class="link link-tw">twitter</a>
-            <a href="#" class="link link-in">linkedin</a>
+            <a href="#" class="link link-p">+420 731 011 200</a>
+            <a href="https://twitter.com/canarytrace" target="_blank" class="link link-tw">twitter</a>
         </div>
     </footer>
 </div>
