--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
         <img src="assets/images/smokepro_logo.svg" alt="SmokePro Logo" class="sp_logo">
         <div class="btn-container">
             <a href="https://bit.ly/canary-doc" target="_blank" class="btn"><img src="assets/images/file.svg" alt="Canarytrace documentation">Documentation</a>
-            <a href="mailto:rdpanek@canarytrace.com,miroslav.kret@canarytrace.com?subject=Canarytrace%20Smoke%20Pro%20Demo" target="_blank" class="btn btn-yellow"><img src="assets/images/time.svg" alt="Request a demo">Request a demo</a>
-            <a href="#" class="btn" target="_blank"><img src="assets/images/down.svg" alt="Download OnePager">Download OnePager</a>
+            <a href="mailto:rdpanek@canarytrace.com?subject=Canarytrace%20Smoke%20Pro%20Demo" target="_blank" class="btn btn-yellow"><img src="assets/images/time.svg" alt="Request a demo">Request a demo</a>
+            <a href="./OnePagerSmokeProV2EN.pdf" class="btn" target="_blank"><img src="assets/images/down.svg" alt="Features Overview">Features Overview</a>
         </div>
     </div>
     <footer>
         <div class="container">
             <p>Canarytrace Smoke Pro is a Plug’n'Play stack for testing and monitoring your web application from user perspective.</p>
             <div class="separ"></div>
-            <a href="#" class="link link-p">+420 731 011 200</a>
+            <a href="#" class="link link-p">Radim Daniel Pánek +420 731 011 200</a>
             <a href="https://twitter.com/canarytrace" target="_blank" class="link link-tw">twitter</a>
         </div>
     </footer>
