--- a/index-demo.html
+++ b/index-demo.html
@@ -41,6 +41,60 @@
             }
         </script>
     </div>
+    <div id="icon-box" class="main-h">
+        <p>Artificial Intelligence icon set</p>
+        <img src="assets/demo-web/img/icons/iconfinder_ArtificialIntelligence1_2890564.png" alt="Icons"  width="25">
+
+        <img src="assets/demo-web/img/icons/iconfinder_ArtificialIntelligence2_2890567.png" alt="Icons"  width="25">
+
+        <p>Big image</p>
+        <img src="assets/demo-web/img/4kWallpaperSmokePro.png" alt="Icons"  width="25">
+
+        <p>Artificial Intelligence icon set</p>
+        <img src="assets/demo-web/img/icons/iconfinder_ArtificialIntelligence3_2890566.png" alt="Icons"  width="25">
+
+        <img src="assets/demo-web/img/icons/iconfinder_ArtificialIntelligence4_2890578.png" alt="Icons"  width="25">
+
+        <img src="assets/demo-web/img/icons/iconfinder_ArtificialIntelligence7_2890571.png" alt="Icons"  width="25">
+
+        <img src="assets/demo-web/img/icons/iconfinder_ArtificialIntelligence8_2890584.png" alt="Icons"  width="25">
+
+        <img src="assets/demo-web/img/icons/iconfinder_ArtificialIntelligence10_2890563.png" alt="Icons"  width="25">
+
+        <img src="assets/demo-web/img/icons/iconfinder_ArtificialIntelligence11_2890562.png" alt="Icons"  width="25">
+
+        <img src="assets/demo-web/img/icons/iconfinder_ArtificialIntelligence12_2890565.png" alt="Icons"  width="25">
+
+        <img src="assets/demo-web/img/icons/iconfinder_ArtificialIntelligence13_2890568.png" alt="Icons"  width="25">
+
+        <img src="assets/demo-web/img/icons/iconfinder_ArtificialIntelligence15_2890577.png" alt="Icons"  width="25">
+
+        <img src="assets/demo-web/img/icons/iconfinder_ArtificialIntelligence16_2890572.png" alt="Icons"  width="25">
+
+        <img src="assets/demo-web/img/icons/iconfinder_ArtificialIntelligence18_2890579.png" alt="Icons"  width="25">
+
+        <img src="assets/demo-web/img/icons/iconfinder_ArtificialIntelligence19_2890585.png" alt="Icons"  width="25">
+
+        <img src="assets/demo-web/img/icons/iconfinder_ArtificialIntelligence20_2890591.png" alt="Icons"  width="25">
+
+        <img src="assets/demo-web/img/icons/iconfinder_ArtificialIntelligence21_2890590.png" alt="Icons"  width="25">
+
+        <img src="assets/demo-web/img/icons/iconfinder_ArtificialIntelligence22_2890588.png" alt="Icons"  width="25">
+
+        <img src="assets/demo-web/img/icons/iconfinder_ArtificialIntelligence23_2890589.png" alt="Icons"  width="25">
+
+        <img src="assets/demo-web/img/icons/iconfinder_ArtificialIntelligence24_2890581.png" alt="Icons"  width="25">
+
+        <img src="assets/demo-web/img/icons/iconfinder_ArtificialIntelligence26_2890587.png" alt="Icons"  width="25">
+
+        <img src="assets/demo-web/img/icons/iconfinder_ArtificialIntelligence27_2890586.png" alt="Icons"  width="25">
+
+        <img src="assets/demo-web/img/icons/iconfinder_ArtificialIntelligence28_2890575.png" alt="Icons"  width="25">
+
+        <img src="assets/demo-web/img/icons/iconfinder_ArtificialIntelligence29_2890576.png" alt="Icons"  width="25">
+
+        <img src="assets/demo-web/img/icons/iconfinder_ArtificialIntelligence30_2890582.png" alt="Icons"  width="25">
+    </div>
     <footer>
         <div class="container">
             <p>Demo application for Performance and WebPerformance testing</p>
