--- a/index.html
+++ b/index.html
@@ -1,107 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <title>BattlePage by Canarytrace</title>
-    <meta name="description" content="BattlePage">
-    <meta property="og:title" content="BattlePage">
-    <meta property="og:description" content="Test site">
-    <meta property="og:url" content="http://canarytrace.com/">
-    <meta property="og:site_name" content="BattlePage">
-    <meta property="og:type" content="website">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@canarytrace">
+  <script>
+    performance.mark('HE-start-head')
+  </script>
+  <meta charset="utf-8">
+  <title>BattlePage by Canarytrace 1.1</title>
+  <meta name="description" content="BattlePage">
+  <meta property="og:title" content="BattlePage">
+  <meta property="og:description" content="Test site">
+  <meta property="og:url" content="http://canarytrace.com/">
+  <meta property="og:site_name" content="BattlePage">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@canarytrace">
 
-    <link rel="stylesheet" href="styles/page.css">
+  <link rel="stylesheet" href="styles/page.css">
 
-    <!-- demo resources / unuset -->
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.js"
-      integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-      crossorigin="anonymous">
-    </script>
-    <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Tangerine">
+  <!-- demo resources / unuset -->
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+    crossorigin="anonymous">
+  </script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+  <script>
+    performance.mark('HE-stop-head')
+  </script>
 </head>
+
 <body>
-<div class="holder">
+  <script>
+    performance.mark('HE-start-body')
+  </script>
+  <div class="holder">
     <div class="main-h">
-        <img src="assets/images/logo-battle.png" alt="Battle Page" class="sp_logo">
-        <div class="btn-container">
-            <a href="https://bit.ly/canary-doc" target="_blank" class="btn"><img src="assets/images/file.svg" alt="Canarytrace documentation">Documentation</a>
-            <a href="./PeformanceTestAnalyza.pdf" target="_blank" class="btn btn-yellow"><img src="assets/images/time.svg" alt="PTA">PTA</a>
-            <a href="./OnePagerSmokeProV2EN.pdf" class="btn" target="_blank"><img src="assets/images/down.svg" alt="Features Overview">Features Overview</a>
-        </div>
+      <script>
+        performance.mark('HE-start-logo')
+      </script>
+      <img src="assets/images/logo-battle.png" alt="Battle Page" class="sp_logo">
+      <script>
+        performance.mark('HE-stop-logo')
+      </script>
+      <script>
+        performance.mark('HE-start-menu')
+      </script>
+      <div class="btn-container">
+        <a href="https://bit.ly/canary-doc" target="_blank" class="btn"><img src="assets/images/file.svg"
+            alt="Canarytrace documentation">Documentation</a>
+        <a href="./PeformanceTestAnalyza.pdf" target="_blank" class="btn btn-yellow"><img src="assets/images/time.svg"
+            alt="PTA">PTA</a>
+        <a href="./OnePagerSmokeProV2EN.pdf" class="btn" target="_blank"><img src="assets/images/down.svg"
+            alt="Features Overview">Features Overview</a>
+      </div>
+      <script>
+        performance.mark('HE-stop-menu')
+      </script>
     </div>
     <div id="demo-box">
-        <script>
-            var foo = new Array(10000);
-            for(var i = 0; i < foo.length; i++){
-                document.write(`<div id='test${(i + 1)}'></div>`); 
-            }
-        </script>
+      <script>
+        var foo = new Array(10000);
+        for (var i = 0; i < foo.length; i++) {
+          document.write(`<div id='test${(i + 1)}'></div>`);
+        }
+      </script>
     </div>
     <div id="icon-box" class="main-h">
-        <p>Artificial Intelligence icon set</p>
-        <img src="assets/icons/iconfinder_ArtificialIntelligence1_2890564.png" alt="Icons"  width="25">
+      <p>Artificial Intelligence icon set</p>
+      <img src="assets/icons/iconfinder_ArtificialIntelligence1_2890564.png" alt="Icons" width="25">
 
-        <img src="assets/icons/iconfinder_ArtificialIntelligence2_2890567.png" alt="Icons"  width="25">
+      <img src="assets/icons/iconfinder_ArtificialIntelligence2_2890567.png" alt="Icons" width="25">
 
-        <p>WallPaper</p>
-        <img src="assets/images/4kWallpaperSmokePro.png" alt="Icons"  width="100">
+      <p>WallPaper</p>
+      <img src="assets/images/4kWallpaperSmokePro.png" alt="Icons" width="100">
 
-        <p>Artificial Intelligence icon set</p>
-        <img src="assets/icons/iconfinder_ArtificialIntelligence3_2890566.png" alt="Icons"  width="25">
+      <p>Artificial Intelligence icon set</p>
+      <img src="assets/icons/iconfinder_ArtificialIntelligence3_2890566.png" alt="Icons" width="25">
 
-        <img src="assets/icons/iconfinder_ArtificialIntelligence4_2890578.png" alt="Icons"  width="25">
+      <img src="assets/icons/iconfinder_ArtificialIntelligence4_2890578.png" alt="Icons" width="25">
 
-        <img src="assets/icons/iconfinder_ArtificialIntelligence7_2890571.png" alt="Icons"  width="25">
+      <img src="assets/icons/iconfinder_ArtificialIntelligence7_2890571.png" alt="Icons" width="25">
 
-        <img src="assets/icons/iconfinder_ArtificialIntelligence8_2890584.png" alt="Icons"  width="25">
+      <img src="assets/icons/iconfinder_ArtificialIntelligence8_2890584.png" alt="Icons" width="25">
 
-        <img src="assets/icons/iconfinder_ArtificialIntelligence10_2890563.png" alt="Icons"  width="25">
+      <img src="assets/icons/iconfinder_ArtificialIntelligence10_2890563.png" alt="Icons" width="25">
 
-        <img src="assets/icons/iconfinder_ArtificialIntelligence11_2890562.png" alt="Icons"  width="25">
+      <img src="assets/icons/iconfinder_ArtificialIntelligence11_2890562.png" alt="Icons" width="25">
 
-        <img src="assets/icons/iconfinder_ArtificialIntelligence12_2890565.png" alt="Icons"  width="25">
+      <img src="assets/icons/iconfinder_ArtificialIntelligence12_2890565.png" alt="Icons" width="25">
 
-        <img src="assets/icons/iconfinder_ArtificialIntelligence13_2890568.png" alt="Icons"  width="25">
+      <img src="assets/icons/iconfinder_ArtificialIntelligence13_2890568.png" alt="Icons" width="25">
 
-        <img src="assets/icons/iconfinder_ArtificialIntelligence15_2890577.png" alt="Icons"  width="25">
+      <img src="assets/icons/iconfinder_ArtificialIntelligence15_2890577.png" alt="Icons" width="25">
 
-        <img src="assets/icons/iconfinder_ArtificialIntelligence16_2890572.png" alt="Icons"  width="25">
+      <img src="assets/icons/iconfinder_ArtificialIntelligence16_2890572.png" alt="Icons" width="25">
 
-        <img src="assets/icons/iconfinder_ArtificialIntelligence18_2890579.png" alt="Icons"  width="25">
+      <img src="assets/icons/iconfinder_ArtificialIntelligence18_2890579.png" alt="Icons" width="25">
 
-        <img src="assets/icons/iconfinder_ArtificialIntelligence19_2890585.png" alt="Icons"  width="25">
+      <img src="assets/icons/iconfinder_ArtificialIntelligence19_2890585.png" alt="Icons" width="25">
 
-        <img src="assets/icons/iconfinder_ArtificialIntelligence20_2890591.png" alt="Icons"  width="25">
+      <img src="assets/icons/iconfinder_ArtificialIntelligence20_2890591.png" alt="Icons" width="25">
 
-        <img src="assets/icons/iconfinder_ArtificialIntelligence21_2890590.png" alt="Icons"  width="25">
+      <img src="assets/icons/iconfinder_ArtificialIntelligence21_2890590.png" alt="Icons" width="25">
 
-        <img src="assets/icons/iconfinder_ArtificialIntelligence22_2890588.png" alt="Icons"  width="25">
+      <img src="assets/icons/iconfinder_ArtificialIntelligence22_2890588.png" alt="Icons" width="25">
 
-        <img src="assets/icons/iconfinder_ArtificialIntelligence23_2890589.png" alt="Icons"  width="25">
+      <img src="assets/icons/iconfinder_ArtificialIntelligence23_2890589.png" alt="Icons" width="25">
 
-        <img src="assets/icons/iconfinder_ArtificialIntelligence24_2890581.png" alt="Icons"  width="25">
+      <img src="assets/icons/iconfinder_ArtificialIntelligence24_2890581.png" alt="Icons" width="25">
 
-        <img src="assets/icons/iconfinder_ArtificialIntelligence26_2890587.png" alt="Icons"  width="25">
+      <img src="assets/icons/iconfinder_ArtificialIntelligence26_2890587.png" alt="Icons" width="25">
 
-        <img src="assets/icons/iconfinder_ArtificialIntelligence27_2890586.png" alt="Icons"  width="25">
+      <img src="assets/icons/iconfinder_ArtificialIntelligence27_2890586.png" alt="Icons" width="25">
 
-        <img src="assets/icons/iconfinder_ArtificialIntelligence28_2890575.png" alt="Icons"  width="25">
+      <img src="assets/icons/iconfinder_ArtificialIntelligence28_2890575.png" alt="Icons" width="25">
 
-        <img src="assets/icons/iconfinder_ArtificialIntelligence29_2890576.png" alt="Icons"  width="25">
+      <img src="assets/icons/iconfinder_ArtificialIntelligence29_2890576.png" alt="Icons" width="25">
 
-        <img src="assets/icons/iconfinder_ArtificialIntelligence30_2890582.png" alt="Icons"  width="25">
+      <img src="assets/icons/iconfinder_ArtificialIntelligence30_2890582.png" alt="Icons" width="25">
     </div>
     <footer>
-        <div class="container">
-            <p>Demo application for Performance and WebPerformance testing</p>
-            <div class="separ"></div>
-            <a href="https://twitter.com/canarytrace" target="_blank" class="link link-tw">twitter</a>
-        </div>
+      <div class="container">
+        <p>Demo application for Performance and WebPerformance testing</p>
+        <div class="separ"></div>
+        <a href="https://twitter.com/canarytrace" target="_blank" class="link link-tw">twitter</a>
+      </div>
     </footer>
-</div>
+  </div>
+  <script>
+    performance.mark('HE-stop-body')
+    performance.measure('head', 'HE-start-head', 'HE-stop-head')
+    performance.measure('body', 'HE-start-body', 'HE-stop-body')
+    performance.measure('logo', 'HE-start-logo', 'HE-stop-logo')
+    performance.measure('menu', 'HE-start-menu', 'HE-stop-menu')
+  </script>
 </body>
+
 </html>
