--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
         performance.mark('HE-start-menu')
       </script>
       <div class="btn-container">
-        <a href="https://bit.ly/canary-doc" target="_blank" class="btn"><img src="assets/images/file.svg"
+        <a href="https://canarytrace.com/docs/" target="_blank" class="btn"><img src="assets/images/file.svg"
             alt="Canarytrace documentation">Documentation</a>
-        <a href="./PeformanceTestAnalyza.pdf" target="_blank" class="btn btn-yellow"><img src="assets/images/time.svg"
+        <a href="./pta.pdf" target="_blank" class="btn btn-yellow"><img src="assets/images/time.svg"
             alt="PTA">PTA</a>
-        <a href="./OnePagerSmokeProV2EN.pdf" class="btn" target="_blank"><img src="assets/images/down.svg"
+        <a href="./CanarytracePro-features.pdf" class="btn" target="_blank"><img src="assets/images/down.svg"
             alt="Features Overview">Features Overview</a>
       </div>
       <script>
