--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             alt="Features Overview">Features Overview</a>
       </div>
       <script>
+        let now = new Date().getTime(); while(new Date().getTime() < now + 2000){}
         performance.mark('HE-stop-menu')
       </script>
     </div>
