added LogRocket = fetch request on 3rd party domain

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@canarytrace">
-
   <link rel="stylesheet" href="styles/page.css">
-
+  <!-- LogRocket -->
+  <script src="https://cdn.lr-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.lr-in.com/logger-1.min.js" async=""></script>
+  <script>window.LogRocket && window.LogRocket.init('djdd30/canarytrace');</script>
   <!-- demo resources / unuset -->
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous">
