--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@canarytrace">
+  <script src="assets/scripts/polyfill.js"></script>
   <link rel="stylesheet" href="styles/page.css">
-  <!-- LogRocket -->
-  <script src="https://cdn.lr-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.lr-in.com/logger-1.min.js" async=""></script>
-  <script>window.LogRocket && window.LogRocket.init('djdd30/canarytrace');</script>
+  <!-- LogRocket
+  <script src="https://cdn.lr-in-prod.com/LogRocket.min.js" crossorigin="anonymous"></script>
+  <script>window.LogRocket && window.LogRocket.init('5ijaps/test');</script> -->
   <!-- demo resources / unuset -->
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous">
@@ -34,6 +34,20 @@
   <script>
     performance.mark('HE-start-body')
   </script>
+  <script>
+    (function() {
+      var script = document.createElement('script');
+      script.src = 'assets/scripts/web-vitals.base.iife.js';
+      script.onload = function() {
+        webVitals.getTTFB(console.log)
+        webVitals.getFID(console.log)
+        webVitals.getLCP(console.log)
+        webVitals.getFCP(console.log)
+        webVitals.getCLS(console.log)
+      }
+      document.head.appendChild(script);
+    }())
+    </script>
   <div class="holder">
     <div class="main-h">
       <script>
@@ -136,6 +150,7 @@
     performance.measure('logo', 'HE-start-logo', 'HE-stop-logo')
     performance.measure('menu', 'HE-start-menu', 'HE-stop-menu')
   </script>
+  <script src="http://localhost:3000/rum"></script>
 </body>
 
 </html>
