--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@canarytrace">
-  <script src="assets/scripts/polyfill.js"></script>
+  <script src="http://localhost:3000/polyfill" defer></script>
+  <script src="http://localhost:3000/rum" defer></script>
   <link rel="stylesheet" href="styles/page.css">
   <!-- LogRocket
   <script src="https://cdn.lr-in-prod.com/LogRocket.min.js" crossorigin="anonymous"></script>
@@ -34,20 +35,6 @@
   <script>
     performance.mark('HE-start-body')
   </script>
-  <script>
-    (function() {
-      var script = document.createElement('script');
-      script.src = 'assets/scripts/web-vitals.base.iife.js';
-      script.onload = function() {
-        webVitals.getTTFB(console.log)
-        webVitals.getFID(console.log)
-        webVitals.getLCP(console.log)
-        webVitals.getFCP(console.log)
-        webVitals.getCLS(console.log)
-      }
-      document.head.appendChild(script);
-    }())
-    </script>
   <div class="holder">
     <div class="main-h">
       <script>
@@ -150,7 +137,6 @@
     performance.measure('logo', 'HE-start-logo', 'HE-stop-logo')
     performance.measure('menu', 'HE-start-menu', 'HE-stop-menu')
   </script>
-  <script src="http://localhost:3000/rum"></script>
 </body>
 
 </html>
