--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@canarytrace">
-  <script src="http://localhost:3000/polyfill" defer></script>
-  <script src="http://localhost:3000/rum" defer></script>
+  <script src="http://localhost:3000/polyfill"></script>
   <link rel="stylesheet" href="styles/page.css">
   <!-- LogRocket
   <script src="https://cdn.lr-in-prod.com/LogRocket.min.js" crossorigin="anonymous"></script>
@@ -137,6 +136,7 @@
     performance.measure('logo', 'HE-start-logo', 'HE-stop-logo')
     performance.measure('menu', 'HE-start-menu', 'HE-stop-menu')
   </script>
+  <script src="http://localhost:3000/rum"></script>
 </body>
 
 </html>
