index.html: added atribute

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@canarytrace">
-  <script src="http://localhost:3000/polyfill"></script>
+  <script src="http://188.166.195.179/polyfill"></script>
   <link rel="stylesheet" href="styles/page.css">
   <!-- LogRocket
   <script src="https://cdn.lr-in-prod.com/LogRocket.min.js" crossorigin="anonymous"></script>
@@ -136,7 +136,7 @@
     performance.measure('logo', 'HE-start-logo', 'HE-stop-logo')
     performance.measure('menu', 'HE-start-menu', 'HE-stop-menu')
   </script>
-  <script src="http://localhost:3000/rum"></script>
+  <script src="http://188.166.195.179/rum" id="canarytrace-rum"></script>
 </body>
 
 </html>
